--- a/assets/css/style-game-mini.scss
+++ b/assets/css/style-game-mini.scss
@@ -320,7 +320,7 @@ img{
 
 .game-mini-result-begin{
 	padding:15px;
-	background: #e74c3c;
+	background: transparent !important;
 	color:white;
 	max-width: 200px;
 
@@ -339,7 +339,46 @@ img{
     border: 2px solid hsla(0,0%,100%,.2);
     cursor: pointer;
 
+    color: #a92c2c;
+    text-transform: uppercase;
+
+
+
     &:hover{
     	background:#c0392b;
     }
+}
+
+
+
+
+.btn-1 {
+  text-decoration: none;
+  border: 1px solid #a92c2c;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-1:hover {
+  box-shadow: 1px 1px 25px 10px rgba(#e74c3c, 0.4);
+}
+
+.btn-1:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba( #e74c3c , 0.4),
+    transparent
+  );
+  transition: all 650ms;
+}
+
+.btn-1:hover:before {
+  left: 100%;
 }
